# subreddit-to-apprise

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/subreddit_to_apprise/: main.py
subreddit_to_apprise/: main.py
